Opened 8 years ago

Closed 8 years ago

Last modified 8 years ago

#13460 closed bug (fixed)

BFilePanel/Tracker multi-selection with SHIFT-click fails after single-selection by keyboard

Reported by: owenca Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Kits/libtracker.so Version: R1/Development
Keywords: BFilePanel, Tracker Cc:
Blocked By: Blocking:
Platform: All

Description

Selecting an item in the file panel with a key (e.g., Home/End, Up/Down, Left/Right, etc.) followed by SHIFT-clicking on another item does not multi-select the items (and any items in between). This bug exists in Tracker, Expander, and any other apps that use BFilePanel with multi-selection turned on.

Attachments (1)

0002-fixes-the-bug-that-caused-multi-selection-by-SHIFT-c.patch (1.1 KB ) - added by owenca 8 years ago.

Download all attachments as: .zip

Change History (8)

comment:1 by owenca, 8 years ago

patch: 01

comment:2 by pulkomandy, 8 years ago

Component: Kits/Storage KitKits/libtracker.so
Owner: changed from nobody to waddlesplash
Status: newassigned

Code changes looks good, but please explain in the commit message why it fixes the problem.

comment:3 by owenca, 8 years ago

updated commit message and attached a new replacement patch.

comment:4 by axeld, 8 years ago

Owner: changed from waddlesplash to axeld
Status: assignedin-progress

comment:5 by axeld, 8 years ago

Resolution: fixed
Status: in-progressclosed

Thank you! Applied in hrev51135. I've taken the liberty to "fix" your commit message: the first line must fit in 64 characters.

comment:6 by axeld, 8 years ago

BTW Tracker itself was also affected by this bug.

comment:7 by owenca, 8 years ago

Thanks for fixing my commit message!

Yes, this bug existed in Tracker as mentioned in the Description section above. (Expander was not affected, though.)

Note: See TracTickets for help on using tickets.